--- a/css/sass/sections/_header.scss
+++ b/css/sass/sections/_header.scss
@@ -178,6 +178,10 @@ header .container {
         margin-top: 7px;
         margin-bottom: -18px;
         font-size: 2.5rem;
+
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            margin-top: -7px;
+        }                                            //IE specific media query
     }
 }
 
